fix(VTextField): align dense mode text field prefix and content (#12759)
* fix(VTextField): align dense mode text field prefix and content

fixes #12743

* fix(VTextField): align dense label with prefix when input is empty

fixes #12743

* fix(VTextField): remove appended icon VTextField margin-top

fixes #12743

* fix(VTextField): update prefix and suffix styles

Make dense style prefix and suffix padding and line-height consistent

* fix(VTextField): restore VInput prefix and suffix padding

add padding left for suffix and padding right for prefix

--- a/packages/vuetify/src/components/VTextField/VTextField.sass
+++ b/packages/vuetify/src/components/VTextField/VTextField.sass
@@ -58,6 +58,9 @@
   padding-top: $text-field-active-label-height
   margin-top: $input-top-spacing - $text-field-active-label-height
 
+  &__prefix,
+  &__suffix
+    line-height: $text-field-line-height
   input
     flex: 1 1 auto
     line-height: $text-field-line-height
@@ -87,9 +90,18 @@
   &.v-input--dense
     padding-top: 0
 
+    .v-label
+      top: 4px
+
     &:not(.v-text-field--outlined)
+      .v-text-field__prefix,
+      .v-text-field__suffix,
       input
         padding: $text-field-dense-padding
+      .v-text-field__prefix
+        padding-right: $text-field-append-prepend-margin
+      .v-text-field__suffix
+        padding-left: $text-field-append-prepend-margin
 
     &[type=text]::-ms-clear
       display: none
@@ -97,12 +109,6 @@
     .v-input__prepend-inner,
     .v-input__append-inner
       margin-top: $text-field-dense-append-prepend-margin
-
-    &:not(.v-text-field--enclosed):not(.v-text-field--full-width)
-      .v-input__prepend-inner,
-      .v-input__append-inner
-        .v-input__icon > .v-icon
-          margin-top: $text-field-dense-icon-append-prepend-margin-top
 
   .v-input__prepend-inner,
   .v-input__append-inner
